--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "@nuxtjs/robots": "^2.4.2",
+    "@nuxtjs/sitemap": "^2.2.1",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "node-sass": "^4.14.0",
