--- a/firebase.json
+++ b/firebase.json
@@ -22,7 +22,7 @@
       "source": "**/*.@(jpg|jpeg|gif|png)",
       "headers": [ {
         "key": "Cache-Control",
-        "value": "max-age=7200"
+        "value": "max-age=315360000"
       } ]
     }]
   }
