--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ node_js:
   - "13"
 install:
   - "npm install -g firebase-tools"
-script: yarn install && yarn generate && firebase deploy --token "$FIREBASE_TOKEN"
+script: yarn install && yarn generate && firebase deploy --only hosting:esc-website-00
+   --token "$FIREBASE_TOKEN"
 branches:
   only:
     - master
