--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap-vue": "^2.0.0",
     "node-sass": "^4.14.0",
     "nuxt": "^2.0.0",
+    "nuxt-facebook-pixel-module": "^1.5.0",
     "nuxt-fontawesome": "^0.4.0",
     "sass-loader": "^8.0.2",
     "vue-carousel": "^0.18.0",
