--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "ESC website",
   "author": "Alessandro Bellanda",
   "private": true,
+  "engines": {
+    "node": "12"
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
